syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "KeyActiveServiceProto";

service KeyActiveService {
  rpc UpdateKeyActive(UpdateKeyActiveRequest) returns (UpdateKeyActiveResponse);
}

message UpdateKeyActiveRequest {
  string keyActive = 1;
  string bankAccountActivated = 2;
  int32 status = 3;
}

message UpdateKeyActiveResponse {
  bool success = 1;
  string message = 2;
}